--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ project/plugins/project/
 # Configs
 src/main/scala/configs/*
 !src/main/scala/configs/example.json
-!src/main/scala/configs/user.json
+#!src/main/scala/configs/user.json
