--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ project/plugins/project/
 # Configs
 src/main/scala/configs/*
 !src/main/scala/configs/example.json
+
+#Test
+src/main/scala/Test.scala
