--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,16 @@
 # IntelliJ project files
 .idea
 *.iml
-gen### Scala template
+# Scala
 *.class
 *.log
 out/
 
-# sbt specific
-.cache
-.history
-.lib/
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
+# gradle
+.gradle
+/build/
+!gradle-wrapper.jar
+.gradletasknamecache
 
 # Scala-IDE specific
 .scala_dependencies
