--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ repositories {
 
 dependencies {
   compile 'org.scala-lang:scala-library:2.11.6'
+  compile 'org.scala-lang:scala-xml:2.11.0-M4'
+  compile 'commons-io:commons-io:2.5'
   compile fileTree(dir: 'lib', include: '*.jar')
 }
 
